--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 @import "tailwindcss";
 
 :root {
-  --ion-font-family: 'Poppins', sans-serif;
+  --ion-font-family: 'Inter', sans-serif;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 ion-content {
-  --ion-font-family: 'Poppins', sans-serif;
+  --ion-font-family: 'Inter', sans-serif;
 }
 
 ion-button {
-  --ion-font-family: 'Poppins', sans-serif;
+  --ion-font-family: 'Inter', sans-serif;
 }
 
 ion-title {
-  --ion-font-family: 'Poppins', sans-serif;
+  --ion-font-family: 'Inter', sans-serif;
 }
